refactor find one loan