@@ -8,12 +8,13 @@ import com.library.exception.exceptions.NotFoundException;
 import com.library.repository.BookRepository;
 import com.library.repository.LoanRepository;
 import com.library.repository.UserRepository;
-import com.library.utils.Pagination;
+import com.library.utils.SortingPagination;
 import com.library.utils.dto.Loan.CreateLoanDto;
 import com.library.utils.dto.Loan.SearchLoanDto;
 import com.library.utils.dto.Loan.UpdateLoanDto;
 import com.library.utils.payload.PaginationResponse;
 import com.library.utils.payload.ResponseMessage;
+import com.library.utils.projections.LoanView;
 import com.library.utils.projections.LoansView;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
@@ -25,7 +26,6 @@ import org.springframework.web.bind.annotation.ResponseBody;
 
 import javax.transaction.Transactional;
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.List;
 
 @Service
@@ -42,67 +42,49 @@ public class LoanService {
         this.userRepository = userRepository;
         this.bookRepository = bookRepository;
     }
-    /*Because you are using the @JsonBackReference on the Customer property in the Loan entity,
-    the Customer object will not included in the serialization. Use the @JsonManagedReference for
-    the Customer in the Loan object and use @JsonBackReference on the Loan property in the Customer entity.
-    This will serialize the Customer property of your Loan entity. But the Customer object serialization
-    will not contains the Loan property. You need to pick one side of the relationship to serialize.
-    To allow both side, use @JsonIdentityInfo annotation in your entity and remove the @JsonBackReference and
-    @JsonManagedReference. You entities will be something like:*/
-    public Loan findOne(Long loanId) {
+
+    public LoanView findOne(Long loanId) {
         return this.loanRepository
-                .findById(loanId)
-                .orElseThrow(() -> new NotFoundException("Loan not found with the given ID!"));
+                .findLoan(loanId)
+                .orElseThrow(() -> new NotFoundException("Loan " + loanId + " not found."));
     }
 
     public ResponseEntity<PaginationResponse> findAll(SearchLoanDto searchParams,
                                                       Integer page, Integer pageSize) {
 
-        List<String> fields = Arrays.asList("source_title", "borrow_date", "created_at");
-        List<String> directions = Arrays.asList("ASC", "DESC");
-
-        if (!fields.contains(searchParams.getField())) {
-            throw new BadRequestException(
-                    "Sorting is allowed only by three fields: source_title, borrow_date and created_at");
-        }
-
-        if (!directions.contains(searchParams.getDirection())) {
-            throw new BadRequestException("Sorting is possible only by two directions: ASC or DESC");
-        }
-
+        SortingPagination.containsDirection(searchParams.getDirection());
+        SortingPagination.containsField(List.of("source_title", "borrow_date", "created_at"), searchParams.getField());
 
         Pageable paging = PageRequest.of(page - 1, pageSize);
         Page<LoansView> loans = this.loanRepository.findAllLoans(searchParams, paging);
 
         if (loans.isEmpty()) {
-            return ResponseEntity
-                    .status(404)
-                    .body(new PaginationResponse(true, 0, loans.getTotalPages(),
-                            page, loans.getContent()));
+            throw new BadRequestException("Loans not found!");
         }
 
-        Pagination pagination = new Pagination();
-        pagination.doesHaveNext(loans, page);
+        SortingPagination.doesHaveNext(loans, page);
 
         return ResponseEntity
                 .status(200)
                 .body(new PaginationResponse(true, loans.getSize(), loans.getTotalElements(),
-                        loans.getTotalPages(), page, pagination.getPagination(), loans.getContent()));
+                        loans.getTotalPages(), page, SortingPagination.getPagination(), loans.getContent()));
     }
 
     public ResponseEntity<ResponseMessage<Loan>> create(CreateLoanDto params) {
         User user = this.userRepository
                 .findById(params.getUser_id())
-                .orElseThrow(() -> new NotFoundException("Please provide existing user id"));
+                .orElseThrow(() -> new NotFoundException("User " + params.getUser_id() + " not found."));
 
         Book book = this.bookRepository
                 .findById(params.getBook_id())
-                .orElseThrow(() -> new NotFoundException("Please provide existing book id"));
+                .orElseThrow(() -> new NotFoundException("Book with " + params.getBook_id() + " not found."));
 
         if (book.getInStock() < 1) {
             return ResponseEntity
                     .status(400)
-                    .body(new ResponseMessage<>(false, "This book is out stock,we cannot loan it."));
+                    .body(new ResponseMessage<>(
+                            false,
+                            "Book " + book.getSourceTitle() + " is out of stock,we cannot loan it."));
         }
 
         checkDates(params.getReturnedDate(), params.getDueDate(), params.getBorrowDate());
@@ -116,7 +98,8 @@ public class LoanService {
 
         return ResponseEntity
                 .status(201)
-                .body(new ResponseMessage<>(true,
+                .body(new ResponseMessage<>(
+                        true,
                         "Loan created successfully",
                         this.loanRepository.save(loan)));
     }
